[package]
name = "clod"
version = "0.1.0"
edition = "2021"
description = "Command Line Object Drawer"
repository = "https://github.com/ethereal-sheep/clod"
license = "MIT OR Apache-2.0"

[lib]
name = "clod"
path = "src/lib.rs"

[dependencies]
bitflags = "2.6.0"
crossterm = "0.28.1"
glam = "0.29.0"
paste = "1.0.15"
rand_distr = "0.4.3"
rgb = "0.8.50"
unicode-width = { version = "0.2.0", default-features = false }

[dev-dependencies]
rand = "0.8.5"
